Fixed font size and scroll on mobile

--- a/style.css
+++ b/style.css
@@ -303,7 +303,13 @@ footer .social-links a:hover {
   .btn {
     font-size: 18px;
   }
+  h1 {
+    font-size: 36px;
+  }
   h4 {
     font-size: 10px;
+  }
+  .patricia {
+    width: 100%;
   }
 }
